[package]
name = "demo"
version = "0.1.0"
authors = ["Slyklaw Dev <slyklaw@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = { version = "0.3.0-alpha.7" }
glam = { version = "0.8", features = ["scalar-math"] }
rhai = { version = "0.19.3" }
